// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<RecipeCard /> as link renders 1`] = `
<div>
  <div
    class="flex flex-col justify-content-center \\   items-center min-w-[20rem] max-w-[30rem] min-h-[20rem] shadow-lg rounded-md"
  >
    <div
      class="w-11/12"
    >
      <img
        class="h-[27rem] w-full object-cover"
      />
    </div>
    <div
      class="m-4"
    >
      <a
        class="text-xl hover:underline hover:cursor-pointer"
        href="www.google.com"
        rel="noopener noreferrer"
        target="_blank"
      >
        test
      </a>
    </div>
  </div>
</div>
`;

exports[`<RecipeCard /> as submit button renders 1`] = `
<div>
  <div
    class="flex flex-col justify-content-center \\   items-center min-w-[20rem] max-w-[30rem] min-h-[20rem] shadow-lg rounded-md"
  >
    <div
      class="w-11/12"
    >
      <img
        alt="test"
        class="h-[27rem] w-full object-cover"
        src="https://fastly.picsum.photos/id/454/200/300.jpg?hmac=wGXBDB3HURz2isRdLrgggeWdD1yO3rdX4B3-jlzRncg"
      />
    </div>
    <div
      class="m-4"
    >
      <a
        class="text-xl hover:underline hover:cursor-pointer"
        href="https://www.feastingathome.com/vegan-fajitas/"
        rel="noopener noreferrer"
        target="_blank"
      >
        test
      </a>
    </div>
  </div>
</div>
`;
